# AgentGirl

./: .gitignore  AGENTS.md  AI_HANDOFF.md  PROJECT_PLAN.md  陪伴类 AI 智能体 – 完整项目架构与技术选型文档.md  陪伴类AI智能体_分模块预算与团队执行方案.md
companion-ai/: .env.example  .gitignore  .importlinter  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  MODULE_CONTRACTS.md  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  start_mvp.bat  start_mvp.ps1
companion-ai/action_executor/: README.md  __init__.py  __main__.py  api.py  handlers.py  main.py  push_bus.py  registry.py  reminders.py  search_provider.py  weather_open_meteo.py
companion-ai/action_layer/: __init__.py  api.py  generator_2d.py  lip_sync.py  main.py  router.py  sequencer.py
companion-ai/core_orchestrator/: __init__.py  api.py  event_bus.py  http_client.py  intent_router.py  main.py  orchestrator.py  project_status.py  state_machine.py
companion-ai/device_coordination/: __init__.py  api.py  main.py  mqtt_client.py  registry.py  task_dispatcher.py
companion-ai/docs/: live2d-integration-plan.md  live2d-test-guide.md  白屏问题排查.md  知识体系教学文档.md
companion-ai/frontend_app/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.ts  vitest.config.ts
companion-ai/frontend_sdk/: package.json  tsconfig.json
companion-ai/frontend_web/: index.html
companion-ai/gateway_adapter/: __init__.py  api.py  event_consumer.py  hermes_bridge.py  main.py  session_manager.py
companion-ai/memory_system/: README.md  __init__.py  __main__.py  api.py  db.py  graph_store.py  main.py  pipeline.py  recall.py  short_term.py  vector_store.py  working.py
companion-ai/onboarding/: README.md  __init__.py  (+1 more)
(+154 files in other folders)
