[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-ai"
version = "0.1.0"
description = "Companion AI agent built on top of Hermes"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.28.1,<1",
    "redis>=5.0,<6",
    "asyncpg>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "neo4j>=5.0,<6",
    "langgraph>=0.2.0,<1",
    "langchain-core>=0.3.0,<1",
    "langchain-openai>=0.2.0,<1",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "aiomqtt>=2.0.0,<3",
    "python-multipart>=0.0.17,<1",
    "structlog>=24.0,<25",
    "orjson>=3.10,<4",
    "tenacity>=9.0,<10",
    "jinja2>=3.1.5,<4",
    "croniter>=6.0.0,<7",
    "celery>=5.4.0,<6",
    "pillow>=11.0.0,<12",
    "pydub>=0.25.1,<1",
    "numpy>=1.26,<3",
    "python-dotenv>=1.2.1,<2",
    "dashscope>=1.20.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-asyncio>=0.24.0,<1", "ruff>=0.7.0,<1", "mypy>=1.13.0,<2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "core_orchestrator*", "persona_engine*", "memory_system*", "voice_layer*", "action_layer*", "action_executor*", "device_coordination*", "gateway_adapter*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
